--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
 
         <!-- Up -->
         <section class="up">
-            <i class="fa-solid fa-angle-up" style="color: #ffffff;"></i>
-            <h6>Take me up again!</h6>
+            <img src="assets/chevrons-up.svg" alt="" class="arrow">
+                <p>Take me up again!</p>
         </section>
 
         <!-- Footer -->
