adding name to footer

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         </section>
 
         <!-- Footer -->
-        <footer> </footer>
+        <footer> <h1>hej</h1></footer>
     </main>
 </body>
 </html>
