adding name to footer

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <p>Together we keep each other safe at home or at work. By paying a tiny fee a day, you are fully insured all day long. You get it all for as little as <span> $0.4 per day.</span></p>
                 <button>JOIN NOW</button>
                 <div class="image-container">
-                    <img src="assets/family.png" alt="An image of a family, including a father, mother, brother, and sister.">
+                    <img src="assets/family.png" alt="An image of a family, including a father, mother, brother, and sister.>
                 </div>
             </div>
             <div class="item2">
@@ -58,7 +58,7 @@
         <div class="container">
             <div class="card card-one">
                 <div class="imgContainer img-one">
-                    <img src="assets/child.png" alt="Card One">
+                    <img src="assets/child.png" alt="Card One" class="child">
                 </div>
                 <div class="content">
                     <h6>Children</h6>
@@ -68,7 +68,7 @@
 
             <div class="card card-two">
                 <div class="imgContainer img-two">
-                    <img src="assets/adult.png" alt="Card Two">
+                    <img src="assets/adult.png" alt="Card Two" class="adult" >
                 </div>
                 <div class="content">
                     <h6>Just right</h6>
@@ -78,7 +78,7 @@
 
             <div class="card card-three">
                 <div class="imgContainer img-three">
-                    <img src="assets/old.png" alt="Card Three">
+                    <img src="assets/old.png" alt="Card Three" >
                 </div>
                 <div class="content">
                     <h6>Old fart</h6>
