--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             </nav>
         </header>
 
+
         <!-- WHY-Section -->
 
         <div class="container-way">
@@ -133,7 +134,7 @@
         </section>
 
         <!-- Footer -->
-        <footer> <h1>hej</h1></footer>
+        <footer> <h1></h1></footer>
     </main>
 </body>
 </html>
