--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         </section>
 
         <!-- Footer -->
-        <footer> <h1></h1></footer>
+        <footer> </footer>
     </main>
 </body>
 </html>
