--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@
         <div class="container-way">
             <div class="column1">
                 <h1 class="row1">Your personal financial safety net online.</h1>
-                <div class="button">
-                    <a href="#">Join now</a>
-                </div>
+                <button>JOIN NOW</button>
             </div>
             <div class="column2">
                 <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tempor ligula vel felis cursus egestas. Etiam consectetur finibus facilisis. Proin accumsan auctor purus, quis finibus tellus accumsan id. Quisque tellus elit, ullamcorper sed mollis ac, interdum vel enim. Pellentesque congue felis eget lorem tempor blandit. Mauris hendrerit ullamcorper ex quis congue donec vel finibus libero.</p>
@@ -107,23 +105,23 @@
             </div>
             <div class="square">
                 <div class="number">1</div>
-                <div class="text">Answer a few questions <br> about yourself</div>
+                <p>Answer a few questions <br> about yourself</p>
             </div>
             <div class="square">
                 <div class="number">2</div>
-                <div class="text">Choose a plan. <br> Get a quote.</div>
+                <p>Choose a plan. <br> Get a quote.</p>
             </div>
             <div class="square">
                 <div class="number">3</div>
-                <div class="text">Answer some questions about <br> your medical history.</div>
+                <p>Answer some questions about <br> your medical history.</p>
             </div>
             <div class="square">
                 <div class="number">4</div>
-                <div class="text">Wait 90 sec to get approved.</div>
+                <p>Wait 90 sec to get approved.</p>
             </div>
             <div class="square">
                 <div class="number">5</div>
-                <div class="text">Done!</div>
+                <p>Done!</p>
             </div>
         </section>
 
