--- a/index.html
+++ b/index.html
@@ -105,23 +105,23 @@
             </div>
             <div class="square">
                 <div class="number">1</div>
-                <p>Answer a few questions <br> about yourself</p>
+                <p class="text1">Answer a few questions about yourself</p>
             </div>
             <div class="square">
                 <div class="number">2</div>
-                <p>Choose a plan. <br> Get a quote.</p>
+                <p class="text1">Choose a plan. Get a quote.</p>
             </div>
             <div class="square">
                 <div class="number">3</div>
-                <p>Answer some questions about <br> your medical history.</p>
+                <p class="text1">Answer some questions about your medical history.</p>
             </div>
             <div class="square">
                 <div class="number">4</div>
-                <p>Wait 90 sec to get approved.</p>
+                <p class="text1">Wait 90 sec to get approved.</p>
             </div>
             <div class="square">
                 <div class="number">5</div>
-                <p>Done!</p>
+                <p class="text1">Done!</p>
             </div>
         </section>
 
