--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="container">
             <div class="card card-one">
                 <div class="imgContainer img-one">
-                    <img src="assets/child.png" alt="Card One">
+                    <img src="assets/child.png" alt="Card One" class="child">
                 </div>
                 <div class="content">
                     <h6>Children</h6>
